# pdfalive

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  README.md  index.html  pyproject.toml  sitemap.xml
.claude/skills/pdf-combiner/: SKILL.md
.claude/skills/pdf-optimizer/: SKILL.md
.github/workflows/: ci.yml
docs/: hardcoded-constants-review.md  usage.md
hardcoded-constants-review/: index.html
pdfalive/: cli.py  prompts.py  tokens.py
pdfalive/models/: prompts.py  rename.py  toc.py  toc_entry.py
pdfalive/processors/: ocr_detection.py  ocr_processor.py  rename_processor.py  toc_generator.py
pdfalive/tests/: test_cli.py  test_config.py  test_models.py  test_tokens.py
pdfalive/tests/processors/: test_ocr_detection.py  test_ocr_integration.py  test_ocr_processor.py  test_rename_processor.py  test_toc_generator.py
search/: search_index.json
usage/: index.html
