[project]
name = "pdfalive"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "click>=8.3.1",
    "langchain>=1.1.2",
    "langchain-anthropic>=1.2.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.6",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "ipython>=9.8.0",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]


[project.scripts]
generate-toc = "pdfalive.cli:generate_toc"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Pylint (Convention)
    "PLC",
    # "PLC0415",  # pylint: import-outside-top-level (import should be at the top-level of a file)
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["deepaudio"]
lines-after-imports = 2
no-lines-before = ["standard-library"]

[tool.ruff.format]
quote-style = "double"
