[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfalive"
version = "0.1.0"
description = "A Python library and CLI tool that uses LLMs to enhance PDF files"
readme = "README.md"
license = "MIT"
authors = [{ name = "Adam Ever-Hadani" }]
keywords = ["pdf", "llm", "toc", "bookmarks", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "click>=8.3.1",
    "langchain>=1.1.2",
    "langchain-anthropic>=1.2.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.6",
    "tqdm>=4.67.1",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "ipython>=9.8.0",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]


[project.scripts]
pdfalive = "pdfalive.cli:cli"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Pylint (Convention)
    "PLC",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["pdfalive"]
lines-after-imports = 2
no-lines-before = ["standard-library"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore SWIG-related deprecation warnings from PyMuPDF (Python 3.13 compatibility issue)
    "ignore:builtin type Swig.*:DeprecationWarning",
    "ignore:builtin type swigvarlink.*:DeprecationWarning",
]
